--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,12 @@
 
 name: Build
 
-# Controls when the workflow will run
-on: 
+on:
   push:
-  workflow_dispatch:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
