--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,12 @@
 name: Build
 
 # Controls when the workflow will run
-on: 
-  push:
-  workflow_dispatch:
+on:
+ push:
+   branches: [ main ]
+ pull_request:
+   branches: [ main ]
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
