--- a/formkiq/.eslintrc.json
+++ b/formkiq/.eslintrc.json
@@ -24,7 +24,8 @@
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@nrwl/nx/typescript"],
       "rules": {
-        "@typescript-eslint/no-explicit-any": 0
+        "@typescript-eslint/no-explicit-any": 0,
+        "@typescript-eslint/no-empty-function": 1
       }
     },
     {
