Configure Playwright with nx to replace cypress and add placeholder test and github action

--- a/formkiq/.eslintrc.json
+++ b/formkiq/.eslintrc.json
@@ -8,6 +8,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "@nrwl/nx"],
+  "ignorePatterns": ["**/lib/**/*"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
