--- a/formkiq/apps/formkiq-document-console-react-e2e/project.json
+++ b/formkiq/apps/formkiq-document-console-react-e2e/project.json
@@ -4,11 +4,11 @@
   "projectType": "application",
   "targets": {
     "e2e": {
-      "executor": "@nrwl/cypress:cypress",
+      "executor": "@mands/nx-playwright:playwright-executor",
       "options": {
-        "cypressConfig": "apps/formkiq-document-console-react-e2e/cypress.config.ts",
-        "devServerTarget": "formkiq-document-console-react:serve:development",
-        "testingType": "e2e"
+        "e2eFolder": "apps/formkiq-document-console-react-e2e",
+        "devServerTarget": "formkiq-document-console-react:serve",
+        "packageRunner": "pnpm"
       },
       "configurations": {
         "production": {
@@ -16,12 +16,22 @@
         }
       }
     },
+    "ts-check": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          {
+            "command": "tsc --build --force --verbose apps/formkiq-document-console-react-e2e/tsconfig.json"
+          }
+        ]
+      }
+    },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
-          "apps/formkiq-document-console-react-e2e/**/*.{js,ts}"
+          "apps/formkiq-document-console-react-e2e/**/*.{ts,tsx,js,jsx}"
         ]
       }
     }
