--- a/formkiq/package.json
+++ b/formkiq/package.json
@@ -7,13 +7,55 @@
     "build": "nx build",
     "test": "nx test",
     "prettier": "npx run prettier --write .",
-    "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "lint": "nx lint",
+    "lint:fix": "nx lint --fix",
+    "e2e": "nx e2e formkiq-document-console-react-e2e",
     "build-sdk": "cd ./libs/formkiq-client-sdk-javascript/build && npm install && npx webpack && cp ./dist/es6/formkiq-client-sdk-es6.js ../../../apps/formkiq-document-console-react/src/app/lib/formkiq-client-sdk-es6.js"
   },
   "private": true,
+  "devDependencies": {
+    "@nrwl/cli": "14.6.3",
+    "@nrwl/eslint-plugin-nx": "14.6.3",
+    "@nrwl/jest": "14.6.3",
+    "@nrwl/linter": "14.6.3",
+    "@nrwl/react": "^15.2.1",
+    "@nrwl/web": "^15.2.1",
+    "@nrwl/workspace": "14.6.3",
+    "@playwright/test": "^1.32.3",
+    "@testing-library/react": "13.3.0",
+    "@types/jest": "28.1.1",
+    "@types/node": "^16.18.24",
+    "@types/react": "18.0.18",
+    "@types/react-dom": "18.0.6",
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-router-dom": "5.3.3",
+    "@typescript-eslint/eslint-plugin": "~5.33.1",
+    "@typescript-eslint/parser": "~5.33.1",
+    "autoprefixer": "^10.4.8",
+    "babel-jest": "28.1.1",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
+    "msw": "^0.47.4",
+    "nx": "14.6.3",
+    "playwright": "^1.32.1",
+    "postcss": "^8.4.16",
+    "prettier": "^2.6.2",
+    "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.2.4",
+    "ts-jest": "28.0.5",
+    "ts-node": "10.9.1",
+    "typescript": "~4.7.2",
+    "webpack-cli": "^4.10.0"
+  },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "@mands/nx-playwright": "^0.4.0",
     "@popperjs/core": "^2.11.6",
     "@reduxjs/toolkit": "^1.8.5",
     "@syncfusion/ej2-react-inputs": "20.1.61",
@@ -34,46 +76,5 @@
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
-  },
-  "devDependencies": {
-    "@nrwl/cli": "14.6.3",
-    "@nrwl/cypress": "14.6.3",
-    "@nrwl/eslint-plugin-nx": "14.6.3",
-    "@nrwl/jest": "14.6.3",
-    "@nrwl/linter": "14.6.3",
-    "@nrwl/react": "^15.2.1",
-    "@nrwl/web": "^15.2.1",
-    "@nrwl/workspace": "14.6.3",
-    "@testing-library/react": "13.3.0",
-    "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
-    "@types/react": "18.0.18",
-    "@types/react-dom": "18.0.6",
-    "@types/react-helmet": "^6.1.5",
-    "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "~5.33.1",
-    "@typescript-eslint/parser": "~5.33.1",
-    "autoprefixer": "^10.4.8",
-    "babel-jest": "28.1.1",
-    "cypress": "^10.2.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.1",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
-    "msw": "^0.47.4",
-    "nx": "14.6.3",
-    "postcss": "^8.4.16",
-    "prettier": "^2.6.2",
-    "react-test-renderer": "18.2.0",
-    "tailwindcss": "^3.2.4",
-    "ts-jest": "28.0.5",
-    "ts-node": "10.9.1",
-    "typescript": "~4.7.2",
-    "webpack-cli": "^4.10.0"
   }
 }
