--- a/formkiq/apps/formkiq-document-console-react-e2e/project.json
+++ b/formkiq/apps/formkiq-document-console-react-e2e/project.json
@@ -15,7 +15,7 @@
       "options": {
         "commands": [
           {
-            "command": "tsc --build --force --verbose apps/formkiq-document-console-react-e2e/tsconfig.json"
+            "command": "tsc --build --force apps/formkiq-document-console-react-e2e/tsconfig.json"
           }
         ]
       }
