--- a/formkiq/apps/formkiq-document-console-react/src/assets/config.json
+++ b/formkiq/apps/formkiq-document-console-react/src/assets/config.json
@@ -1,10 +1,10 @@
 {
-  "documentApi": "{DOCUMENT_API_URL}",
-  "userPoolId": "{USER_POOL_ID}",
-  "clientId": "{CLIENT_ID}",
-  "consoleVersion": "v3.0.0",
+  "documentApi": "https://dzevnwtyz4.execute-api.us-east-2.amazonaws.com",
+  "userPoolId": "us-east-2_PMH8inGOX",
+  "clientId": "1nol56jeud98ime10tbchh8nq1",
+  "consoleVersion": "v3.1.0",
   "brand": "formkiq",
   "userAuthentication": "cognito",
-  "authApi": "{FORMKIQ_AUTH_URL}",
-  "cognitoHostedUi": "{FORMKIQ_HOSTED_UI_URL}"
+  "authApi": "https://nt5e3thcgl.execute-api.us-east-2.amazonaws.com",
+  "cognitoHostedUi": "https://formkiq-enterprise-demo-622653865277.auth.us-east-2.amazoncognito.com"
 }
