--- a/formkiq/package.json
+++ b/formkiq/package.json
@@ -72,6 +72,7 @@
     "react-popper": "^2.3.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6.3.0",
+    "react-tooltip": "^5.20.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "reflect-metadata": "^0.1.13",
