--- a/.github/workflows/docker_hub.yaml
+++ b/.github/workflows/docker_hub.yaml
@@ -40,6 +40,8 @@ jobs:
 
       - name: Build and push Docker image
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        env:
+          VERSION: ${{ env.PACKAGE_VERSION }}
         with:
           context: .
           file: ./Dockerfile
