--- a/.github/workflows/docker_hub.yaml
+++ b/.github/workflows/docker_hub.yaml
@@ -46,4 +46,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: formkiq/document-console:${VERSION}-SNAPSHOT
+          tags: "formkiq/document-console:${VERSION}-SNAPSHOT"
