added ability to use authApi for sign-in (if useAuthApiForSignIn config = true)

--- a/formkiq/apps/formkiq-document-console-react/src/assets/config.json
+++ b/formkiq/apps/formkiq-document-console-react/src/assets/config.json
@@ -6,5 +6,6 @@
   "brand": "formkiq",
   "userAuthentication": "cognito",
   "authApi": "https://nt5e3thcgl.execute-api.us-east-2.amazonaws.com",
-  "cognitoHostedUi": "https://formkiq-enterprise-demo-622653865277.auth.us-east-2.amazoncognito.com"
+  "cognitoHostedUi": "https://formkiq-enterprise-demo-622653865277.auth.us-east-2.amazoncognito.com",
+  "useAuthApiForSignIn": "false"
 }
