--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,5 +46,5 @@ jobs:
           S3_BUCKET: ${{ secrets.S3_BUCKET }}
           VERSION: ${{ env.PACKAGE_VERSION }}
         run: |
-          aws s3 cp formkiq/dist/apps/formkiq-document-console-react/formkiq-console.zip s3://${S3_BUCKET}/formkiq-console/v${VERSION}/formkiq-console.zip --acl public-read
+          (aws s3 ls "s3://${S3_BUCKET}/formkiq-console/v${VERSION}/formkiq-console.zip") && exit 1 || aws s3 cp formkiq/dist/apps/formkiq-document-console-react/formkiq-console.zip s3://${S3_BUCKET}/formkiq-console/v${VERSION}/formkiq-console.zip --acl public-read
           aws s3api put-object-legal-hold --bucket ${S3_BUCKET} --key formkiq-console/v${VERSION}/formkiq-console.zip --legal-hold Status=ON
