--- a/formkiq/package.json
+++ b/formkiq/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formkiq",
-  "version": "3.3.2",
+  "version": "3.4.0",
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
@@ -24,6 +24,7 @@
     "@nrwl/workspace": "14.6.3",
     "@playwright/test": "^1.39.0",
     "@testing-library/react": "13.3.0",
+    "@types/codemirror": "^5.60.15",
     "@types/jest": "28.1.1",
     "@types/node": "^16.18.24",
     "@types/react": "18.0.18",
@@ -61,6 +62,8 @@
     "@projectstorm/react-diagrams": "^7.0.3",
     "@reduxjs/toolkit": "^1.9.7",
     "@syncfusion/ej2-react-inputs": "20.1.61",
+    "codemirror": "^5.65.16",
+    "codemirror-rego": "^1.2.3",
     "core-js": "^3.33.1",
     "moment": "^2.29.4",
     "react": "18.2.0",
@@ -78,6 +81,7 @@
     "redux-thunk": "^2.4.1",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "vanilla-jsoneditor": "^0.21.4"
   }
 }
