--- a/formkiq/package.json
+++ b/formkiq/package.json
@@ -25,12 +25,14 @@
     "@playwright/test": "^1.39.0",
     "@testing-library/react": "13.3.0",
     "@types/codemirror": "^5.60.15",
+    "@types/dagre": "^0.7.52",
     "@types/jest": "28.1.1",
     "@types/node": "^16.18.24",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "5.3.3",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "~5.33.1",
     "@typescript-eslint/parser": "~5.33.1",
     "autoprefixer": "^10.4.8",
@@ -67,6 +69,7 @@
     "core-js": "^3.33.1",
     "moment": "^2.29.4",
     "react": "18.2.0",
+    "react-archer": "^4.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
@@ -77,11 +80,13 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "6.3.0",
     "react-tooltip": "^5.20.0",
+    "reactflow": "^11.10.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "vanilla-jsoneditor": "^0.21.6"
   }
 }
