Added isAdmin and removed navigation links to admin areas for non-admin

--- a/formkiq/apps/formkiq-document-console-react/src/assets/config.json
+++ b/formkiq/apps/formkiq-document-console-react/src/assets/config.json
@@ -7,5 +7,5 @@
   "userAuthentication": "cognito",
   "authApi": "https://nt5e3thcgl.execute-api.us-east-2.amazonaws.com",
   "cognitoHostedUi": "https://formkiq-enterprise-demo-622653865277.auth.us-east-2.amazoncognito.com",
-  "useAuthApiForSignIn": "false"
+  "useAuthApiForSignIn": "true"
 }
