--- a/formkiq/package.json
+++ b/formkiq/package.json
@@ -27,6 +27,7 @@
     "@testing-library/react": "13.3.0",
     "@types/codemirror": "^5.60.15",
     "@types/dagre": "^0.7.52",
+    "@types/dompurify": "^3.0.5",
     "@types/jest": "28.1.1",
     "@types/node": "^16.18.24",
     "@types/react": "18.0.18",
@@ -69,6 +70,8 @@
     "codemirror": "^5.65.16",
     "codemirror-rego": "^1.2.3",
     "core-js": "^3.33.1",
+    "dompurify": "^3.1.6",
+    "marked": "^13.0.2",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-archer": "^4.3.0",
