--- a/formkiq/package.json
+++ b/formkiq/package.json
@@ -30,6 +30,7 @@
     "@types/dompurify": "^3.0.5",
     "@types/jest": "28.1.1",
     "@types/node": "^16.18.24",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
     "@types/react-helmet": "^6.1.5",
@@ -73,6 +74,7 @@
     "dompurify": "^3.1.6",
     "marked": "^13.0.2",
     "moment": "^2.29.4",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-archer": "^4.3.0",
     "react-dnd": "^16.0.1",
