--- a/formkiq/package.json
+++ b/formkiq/package.json
@@ -15,13 +15,15 @@
   },
   "private": true,
   "devDependencies": {
-    "@nx/devkit": "16.10.0",
-    "@nx/eslint-plugin": "16.10.0",
-    "@nx/jest": "16.10.0",
-    "@nx/js": "16.10.0",
-    "@nx/react": "16.10.0",
-    "@nx/webpack": "16.10.0",
+    "@nx/devkit": "17.3.2",
+    "@nx/eslint-plugin": "17.3.2",
+    "@nx/jest": "17.3.2",
+    "@nx/js": "17.3.2",
+    "@nx/react": "17.3.2",
+    "@nx/webpack": "17.3.2",
     "@playwright/test": "^1.39.0",
+    "@swc-node/register": "^1.10.9",
+    "@swc/core": "^1.10.8",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/react": "13.3.0",
     "@types/codemirror": "^5.60.15",
@@ -35,20 +37,20 @@
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "5.3.3",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "5.60.1",
-    "@typescript-eslint/parser": "5.60.1",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "autoprefixer": "^10.4.8",
     "babel-jest": "28.1.1",
     "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-import": "2.26.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "msw": "^2.7.0",
-    "nx": "^16.10.0",
+    "nx": "17.3.2",
     "playwright": "^1.32.1",
     "postcss": "^8.4.31",
     "prettier": "^2.6.2",
@@ -56,6 +58,7 @@
     "tailwindcss": "^3.2.4",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "4.8.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
@@ -63,8 +66,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.2",
     "@mands/nx-playwright": "^0.4.0",
-    "@nrwl/cypress": "^19.8.4",
-    "@nrwl/js": "^19.8.4",
+    "@nx/cypress": "17.3.2",
+    "@nx/js": "17.3.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@popperjs/core": "^2.11.6",
     "@projectstorm/react-diagrams": "^7.0.3",
