--- a/formkiq/package.json
+++ b/formkiq/package.json
@@ -15,47 +15,47 @@
   },
   "private": true,
   "devDependencies": {
-    "@nx/devkit": "17.3.2",
-    "@nx/eslint-plugin": "17.3.2",
-    "@nx/jest": "17.3.2",
-    "@nx/js": "17.3.2",
-    "@nx/react": "17.3.2",
-    "@nx/webpack": "17.3.2",
+    "@nx/devkit": "20.3.2",
+    "@nx/eslint-plugin": "20.3.2",
+    "@nx/jest": "20.3.2",
+    "@nx/js": "20.3.2",
+    "@nx/react": "20.3.2",
+    "@nx/webpack": "20.3.2",
     "@playwright/test": "^1.39.0",
-    "@swc-node/register": "^1.10.9",
-    "@swc/core": "^1.10.8",
+    "@swc-node/register": "1.9.2",
+    "@swc/core": "1.5.7",
     "@tailwindcss/forms": "^0.5.7",
-    "@testing-library/react": "13.3.0",
+    "@testing-library/react": "15.0.6",
     "@types/codemirror": "^5.60.15",
     "@types/dagre": "^0.7.52",
     "@types/dompurify": "^3.0.5",
-    "@types/jest": "28.1.1",
+    "@types/jest": "29.5.14",
     "@types/node": "^16.18.24",
     "@types/papaparse": "^5.3.14",
-    "@types/react": "18.0.18",
-    "@types/react-dom": "18.0.6",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "5.3.3",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "autoprefixer": "^10.4.8",
-    "babel-jest": "28.1.1",
+    "babel-jest": "29.7.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-react": "7.31.1",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "msw": "^2.7.0",
-    "nx": "17.3.2",
+    "nx": "20.3.2",
     "playwright": "^1.32.1",
-    "postcss": "^8.4.31",
+    "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "3.4.3",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "tsconfig-paths": "^4.2.0",
@@ -66,7 +66,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.2",
     "@mands/nx-playwright": "^0.4.0",
-    "@nx/cypress": "17.3.2",
+    "@nx/cypress": "20.3.2",
     "@nx/js": "17.3.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@popperjs/core": "^2.11.6",
@@ -81,11 +81,11 @@
     "marked": "^13.0.2",
     "moment": "^2.29.4",
     "papaparse": "^5.4.1",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-archer": "^4.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "18.2.0",
+    "react-dom": "18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.34.2",
