--- a/formkiq/apps/formkiq-document-console-react/project.json
+++ b/formkiq/apps/formkiq-document-console-react/project.json
@@ -66,7 +66,7 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
@@ -75,7 +75,7 @@
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": [
         "{workspaceRoot}/coverage/apps/formkiq-document-console-react"
       ],
