update nrwl to nx

--- a/formkiq/nx.json
+++ b/formkiq/nx.json
@@ -22,7 +22,7 @@
     }
   },
   "generators": {
-    "@nrwl/react": {
+    "@nx/react": {
       "application": {
         "style": "scss",
         "linter": "eslint",
