--- a/formkiq/.eslintrc.json
+++ b/formkiq/.eslintrc.json
@@ -7,13 +7,13 @@
     "plugin:react-hooks/recommended"
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "@nrwl/nx"],
+  "plugins": ["@typescript-eslint", "@nx/eslint-plugin"],
   "ignorePatterns": ["**/lib/**/*"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
-        "@nrwl/nx/enforce-module-boundaries": [
+        "@nx/enforce-module-boundaries": [
           "error",
           {
             "enforceBuildableLibDependency": true,
@@ -30,7 +30,7 @@
     },
     {
       "files": ["*.ts", "*.tsx"],
-      "extends": ["plugin:@nrwl/nx/typescript"],
+      "extends": ["plugin:@nx/eslint-plugin/typescript"],
       "rules": {
         "@typescript-eslint/no-explicit-any": 0,
         "@typescript-eslint/no-empty-function": 1
@@ -38,7 +38,7 @@
     },
     {
       "files": ["*.js", "*.jsx"],
-      "extends": ["plugin:@nrwl/nx/javascript"],
+      "extends": ["plugin:@nx/eslint-plugin/javascript"],
       "rules": {}
     },
     {
