--- a/formkiq/package.json
+++ b/formkiq/package.json
@@ -16,6 +16,7 @@
   "private": true,
   "devDependencies": {
     "@nx/devkit": "20.3.2",
+    "@nx/eslint": "20.3.2",
     "@nx/eslint-plugin": "20.3.2",
     "@nx/jest": "20.3.2",
     "@nx/js": "20.3.2",
@@ -37,15 +38,15 @@
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "5.3.3",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
     "autoprefixer": "^10.4.8",
     "babel-jest": "29.7.0",
-    "eslint": "~8.15.0",
+    "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
-    "eslint-plugin-react": "7.31.1",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
