--- a/formkiq/package.json
+++ b/formkiq/package.json
@@ -60,7 +60,7 @@
     "ts-jest": "29.2.5",
     "ts-node": "10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "4.8.4",
+    "typescript": "^5.7.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
   },
